--- a/app/views/projects/_resources.html.erb
+++ b/app/views/projects/_resources.html.erb
@@ -15,7 +15,7 @@
 
         <div class="panel panel-info">
           <div class="panel-heading"  st-safe-src="resources" st-table="resource_list">
-            <input st-search placeholder="Global search" class="input-sm form-control" type="search"/>
+            <input st-search placeholder="Búsqueda" class="input-sm form-control" type="search"/>
           </div>
               <table class="table table-striped table-bordered document" st-safe-src="resources" st-table="resource_list">
                 <thead>
