alinear icon acción

--- a/app/views/projects/_resources.html.erb
+++ b/app/views/projects/_resources.html.erb
@@ -39,7 +39,7 @@
                         </td>
                         <td>{{resource.public}}</td>
                         <td>{{resource.updated_at}}</td>
-                        <td>
+                        <td class="text-right">
                             <%= button_tag "Editar", {class: "btn btn-link", :"ng-click" => "open_form(resource)", type: "button"} do %>
                               <i class="fa fa-edit" title="Edit"></i>
                             <% end %>
