--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -25,7 +25,7 @@
             <h2><%= @project.title %></h2>
             <p><%= @project.description %></p>
             <button class="btn btn-warning" onclick="javascript:introJs().start();">
-              <i class="fa fa-map"></i> <%= t('.guide_me') %>
+              <i class="fa fa-map"></i> Guíame
             </button>
           </div>
           <h3 class="mb50">Etapa 1: Identificar el problema y los objetivos políticos a lograr</h3>
