cambio fondo project-hero

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -577,7 +577,7 @@ table.indicator td:first-child {
 .project-hero {
     margin: -1px -0px 30px -0px;
     padding: 20px;
-    background: #63c0d6 url(/assets/project-hero01.png) no-repeat bottom right;
+    background: #00c2e4 url(/assets/project-hero01.png) no-repeat bottom right;
     color: #fff;
     min-height: 210px;
     border-radius: 0px 6px 0px 0px;
