cambio hover botón warning

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -44,8 +44,8 @@ table .fa-pencil-square-o, table .fa-trash, table .fa-line-chart, table .fa-cale
   border-color: #FF635A;
 }
 .btn-warning:hover, .btn-warning:focus, .btn-warning:active, .btn-warning.active, .open .dropdown-toggle.btn-warning {
-  background-color: #eb0f4a;
-  border-color: #eb0f4a;
+  background-color: #c0453e;
+  border-color: #c0453e;
 }
 
 .btn-info {
