--- a/app/views/objectives/stage4.html.erb
+++ b/app/views/objectives/stage4.html.erb
@@ -28,7 +28,7 @@
           <div class="project-hero">
             <h2><%= t('.subtitle1') %></h2>
             <p><%= t('.subtitle1_explanation') %></p>
-            <button class="btn btn-warning" onclick="javascript:introJs().start();">
+            <button class="btn btn-success" onclick="javascript:introJs().start();">
               <i class="fa fa-map"></i> <%= t('.guide_me') %>
             </button>
           </div>
