Change btn-warning color

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -43,8 +43,8 @@ table .fa-pencil-square-o, table .fa-trash, table .fa-line-chart, table .fa-cale
   font-weight: 300;
 }
 .btn-warning {
-  background-color: #FF635A;
-  border-color: #FF635A;
+  background-color: #E77400;
+  border-color: #E77400;
 }
 .btn-warning:hover, .btn-warning:focus, .btn-warning:active, .btn-warning.active, .open .dropdown-toggle.btn-warning {
   background-color: #c0453e;
@@ -441,8 +441,8 @@ div#resources_paginate {
 
 .benefits .btn-danger, .banner .btn-danger {
     border-radius: 15px;
-    background-color: #eb0f4a;
-    border-color: #eb0f4a;
+    background-color: #E77400;
+    border-color: #E77400;
     color: #ffffff;
     text-transform: none;
 }
