Change testimonial background-color

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -467,7 +467,7 @@ div#resources_paginate {
 }
 .testimonial {
   color: #ffffff;
-  background-color: #0091EA;
+  background-color: #021b2d;
   font-weight: 300;
 }
 .testimonial p.cita {
