--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,7 +76,7 @@
         <div class="row">
           <div class="col-xs-6 col-sm-6 col-md-8 col-lg-4">
             <p class="brand" href="#">Estratega <span>Beta</span></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec .</p>
+                <p>Estratega es una metodología de advocacy que reduce los riesgos y aumenta el desempeño de tu equipo al momento de llevar a cabo un plan estratégico para incidir en políticas públicas.</p>
               </div>
           <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4 col-md-offset-4 col-lg-offset-4">
             <h5>Contact</h5>
