--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -116,7 +116,7 @@
                             <td class="text-center td-w-10p">
                               <i class="<%= icon_class objective.actors %>"></i>
                             </td>
-                            <td><%= link_to "Understand the institutional and decision-making cycles/Policy process", stage3_project_objective_path(@project, objective), target: "_self" %></td>
+                            <td><%= link_to "Comprender el proceso institucional de ciclos de toma de decisiones / Procesos Políticos", stage3_project_objective_path(@project, objective), target: "_self" %></td>
                           </tr>
                           <tr title="You must complete the previous step">
                             <td class="text-center td-w-10p">
