--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -68,7 +68,7 @@
       </div>
       <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
         <p class="cita">“<%= t('.testimony1_txt') %>”</p>
-        <p><%= t('.testimony1_signer') %></p>
+        <p class="persona"><%= t('.testimony1_signer') %></p>
       </div>
     </div>
     <div class="row">
@@ -77,7 +77,7 @@
       </div>
       <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
         <p class="cita">“<%= t('.testimony1_txt') %>”</p>
-        <p><%= t('.testimony1_signer') %></p>
+        <p class="persona"><%= t('.testimony1_signer') %></p>
       </div>
     </div>
     <div class="row">
@@ -86,7 +86,7 @@
       </div>
       <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
         <p class="cita">“<%= t('.testimony3_txt') %>”</p>
-        <p><%= t('.testimony3_signer') %></p>
+        <p class="persona"><%= t('.testimony3_signer') %></p>
       </div>
     </div>
   </div>
