--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -498,6 +498,12 @@ div#resources_paginate {
 .testimonial img {
   width: 100%;
 }
+.instituciones{
+  padding: 50px 0;
+  text-align: center;
+  background-color: #63c0d6;
+  height: 450px;
+}
 .banner {
   background: image-url("welcome.png");
   background-position: center;
@@ -508,7 +514,6 @@ div#resources_paginate {
   background-color: #021b2d;
   height: 550px;
 }
-
 .banner .container {
   padding: 40px 0;
 }
