--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -91,3 +91,20 @@
     </div>
   </div>
 </div>
+<div class="instituciones">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+      Techo
+      </div>
+      <div class="col-md-6">
+      Hogar
+      </div>       
+    </div>
+  </div>
+</div>
