--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -37,19 +37,19 @@
       </div>
     </div>
     <div class="row mb50">
-      <div class="col-md-3">
+      <div class="col-sm-6 col-md-3">
         <p><%= image_tag "1.png" %></p>
         <p><%= t('.sentence_resources') %></p>
       </div>
-      <div class="col-md-3">
+      <div class="col-sm-6 col-md-3">
         <p><%= image_tag "2.png" %></p>
         <p><%= t('.sentence_advocacy') %></p>
       </div>
-      <div class="col-md-3 ">
+      <div class="col-sm-6 col-md-3 ">
         <p><%= image_tag "3.png" %></p>
         <p><%= t('.sentence_risks') %></p>
       </div>
-      <div class="col-md-3">
+      <div class="col-sm-6 col-md-3">
         <p><%= image_tag "4.png" %></p>
         <p><%= t('.sentence_keep_track') %></p>
       </div>
