agregué ayuda 4 al guíame stage1

--- a/app/views/projects/stage1.html.erb
+++ b/app/views/projects/stage1.html.erb
@@ -1,6 +1,6 @@
 <% content_for :breadcrumb do %>
   <div class="breadcrumb_bg">
-    <ol class="breadcrumb container">
+    <ol class="breadcrumb container" data-step="4" data-intro="<%= t('.step_four') %>">
       <li>
         <%= link_to t('.projects'), projects_path, target: "_self" %>
       </li>
