margen botton testimonial home

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -498,6 +498,9 @@ div#resources_paginate {
 .testimonial img {
   width: 100%;
 }
+.testimonial .row {
+  margin-bottom: 20px;
+}
 .instituciones{
   padding: 50px 0;
   text-align: center;
