--- a/app/views/projects/_project_modal.erb
+++ b/app/views/projects/_project_modal.erb
@@ -6,11 +6,11 @@
     <form>
       <div class="form-group">
         <label for="title"><%= t('.title') %></label>
-        <input type="text" name="title" class="form-control" ng-model="current_project.title" placeholder="Enter a title for the project">
+        <input type="text" name="title" class="form-control" ng-model="current_project.title" placeholder="Ingrese un nombre de proyecvto">
       </div>
       <div class="form-group">
         <label for="description"><%= t('.description') %></label>
-        <textarea name="description" class="form-control" ng-model="current_project.description" placeholder="Enter a description for the project"></textarea>
+        <textarea name="description" class="form-control" ng-model="current_project.description" placeholder="Ingrese una descripción del proyecto"></textarea>
       </div>
       <div class="form-group">
         <label for="focus_area"><%= t('.focus_area') %></label>
