cambio en decoración link nav bar

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -661,6 +661,7 @@ table.indicator td:first-child {
 
 .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
     color: #FFFFFF;
+    text-decoration: underline;
 }
 
 .tab-content > .active {
