--- a/app/views/projects/_project_modal.erb
+++ b/app/views/projects/_project_modal.erb
@@ -14,9 +14,7 @@
       </div>
       <div class="form-group">
         <label for="focus_area"><%= t('.focus_area') %></label>
-        <select name="focus_area" class="form-control" ng-model="current_project.focus_area">
-          <option ng-repeat="fa in focus_areas">{{ fa }}</option>
-        </select>
+        <input type="text" name="focus_area" class="form-control" ng-model="current_project.focus_area" placeholder="Ingrese un área de focalización">
       </div>
       <div class="checkbox">
         <label>
