--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -36,6 +36,10 @@ table .fa-pencil-square-o, table .fa-trash, table .fa-line-chart, table .fa-cale
     color: #ffffff;
 }
 
+.navbar-brand > img{
+  margin: -7px 0 0 0;
+}
+
 /*BUTTONS */
 
 .btn {
