--- a/app/views/layouts/_navbar_signin.erb
+++ b/app/views/layouts/_navbar_signin.erb
@@ -8,7 +8,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="<%= root_path %>" target="_self">Estratega <span>Beta</span></a>
+    <a class="navbar-brand" href="<%= root_path %>" target="_self"><%= image_tag "logo.png" %><span>Beta</span></a>
   </div>
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div id="navbar" class="nav navbar-collapse collapse pull-right">
