Change buttons colors

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -47,8 +47,8 @@ table .fa-pencil-square-o, table .fa-trash, table .fa-line-chart, table .fa-cale
   font-weight: 300;
 }
 .btn-warning {
-  background-color: #E77400;
-  border-color: #E77400;
+  background-color: #FF6459;
+  border-color: #FF6459;
 }
 .btn-warning:hover, .btn-warning:focus, .btn-warning:active, .btn-warning.active, .open .dropdown-toggle.btn-warning {
   background-color: #c0453e;
@@ -445,8 +445,8 @@ div#resources_paginate {
 
 .benefits .btn-danger, .banner .btn-danger {
     border-radius: 15px;
-    background-color: #E77400;
-    border-color: #E77400;
+    background-color: #FF6459;
+    border-color: #FF6459;
     color: #ffffff;
     text-transform: none;
 }
@@ -457,15 +457,15 @@ div#resources_paginate {
 }
 .benefits .btn-default {
     border-radius: 15px;
-    background-color: #023355;
-    border-color: #023355;
+    background-color: #01598F;
+    border-color: #01598F;
     color: #ffffff;
     text-transform: none;
 }
 .benefits .btn-default:focus, .benefits .btn-default.focus {
     border-radius: 15px;
-    background-color: #023355;
-    border-color: #023355;
+    background-color: #01598F;
+    border-color: #01598F;
     color: #ffffff;
     text-transform: none;
 }
