color botón naranjo modal

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -392,8 +392,8 @@ div#resources_paginate {
   margin-left: 5px;
 }
 .modal-footer .btn-primary {
-  background-color: #FF635A;
-  border-color: #FF635A;
+  background-color: #FF6459;
+  border-color: #FF6459;
   font-weight: 300;
 }
 .modal-footer .btn-warning {
