--- a/app/views/projects/stage1.html.erb
+++ b/app/views/projects/stage1.html.erb
@@ -35,9 +35,9 @@
           <div role="tabpanel" class="tab-pane active" id="data">
             <div class="panel panel-default">
               <div class="panel-heading" id='real-problem' data-step="2" data-intro="<%= t('.step_two') %>">
-                <!-- <button type="button" class="btn btn-warning pull-right">Editar</button> -->
+                <!-- <button type="button" class="btn btn-warning pull-right">Edit</button> -->
                 <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" data-title="<%= t('.subtitle1_tooltip') %>"><i class="fa fa-info"></i></button>
-                <button type="button" class="btn pull-right" ng-class="{'btn-warning': problem.id, 'btn-info': !problem.id}" ng-click="add_step_one(problem)"><i class="fa" ng-class="{'fa-pencil': problem.id, 'fa-plus-circle': !problem.id}"></i> {{ btn_problem }}</button>
+                <button type="button" class="btn pull-right" ng-class="{'btn-warning': problem.id, 'btn-warning': !problem.id}" ng-click="add_step_one(problem)"><i class="fa" ng-class="{'fa-pencil': problem.id, 'fa-plus-circle': !problem.id}"></i> {{ btn_problem }}</button>
                 <h4 class="panel-title"><%= t('.subtitle1') %></h4>
               </div>
             </div>
