--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -24,7 +24,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="<%= root_path %>" target="_self"><%= image_tag "logo.png" %> <span><%= image_tag "logo.png" %></span></a>
+          <a class="navbar-brand" href="<%= root_path %>" target="_self"><%= image_tag "logo.png" %> <span>Beta</span></a>
         </div>
         <!-- collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
