--- a/app/views/projects/_project_modal.erb
+++ b/app/views/projects/_project_modal.erb
@@ -6,7 +6,7 @@
     <form>
       <div class="form-group">
         <label for="title"><%= t('.title') %></label>
-        <input type="text" name="title" class="form-control" ng-model="current_project.title" placeholder="Ingrese un nombre de proyecvto">
+        <input type="text" name="title" class="form-control" ng-model="current_project.title" placeholder="Ingrese un nombre de proyecto">
       </div>
       <div class="form-group">
         <label for="description"><%= t('.description') %></label>
