--- a/app/views/objectives/stage3.html.erb
+++ b/app/views/objectives/stage3.html.erb
@@ -84,14 +84,18 @@
               </div>
               <div class="collapse steps in">
                 <table class="table">
-                  <tr>
-                    <th><%= t('.description') %></th>
-                    <th class="text-right"><%= t('.actions') %></th>
-                  </tr>
-                  <tr ng-repeat="barrier in objective.barriers track by $index">
-                    <td>{{barrier}}</td>
-                    <td class="text-right"><a href="#" title="Edit" ng-click="add_edit_barrier(barrier)"><i class="fa fa-pencil-square-o"></i></a> <a href="#" title="Delete" ng-click="delete_barrier(barrier)"><i class="fa fa-trash"></i></a></td>
-                  </tr>
+                  <thead>
+                    <tr>
+                      <th><%= t('.description') %></th>
+                      <th class="text-right"><%= t('.actions') %></th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr ng-repeat="barrier in objective.barriers track by $index">
+                      <td>{{barrier}}</td>
+                      <td class="text-right"><a href="#" title="Edit" ng-click="add_edit_barrier(barrier)"><i class="fa fa-pencil-square-o"></i></a> <a href="#" title="Delete" ng-click="delete_barrier(barrier)"><i class="fa fa-trash"></i></a></td>
+                    </tr>
+                  </tbody>
                 </table>
               </div>
             </div>
