--- a/app/views/objectives/_outcome_modal.html.erb
+++ b/app/views/objectives/_outcome_modal.html.erb
@@ -16,7 +16,7 @@
       </div>
       <!--<div class="form-group">
         <label for="actor_type"><%= t('.actor_type') %></label>
-        <select name="actor_type" ng-model="current_outcome.actor_type_id">
+        <select class="form-control" name="actor_type" ng-model="current_outcome.actor_type_id">
           <option ng-repeat="at in actor_types">{{ at }}</option>
         </select>
       </div>-->
