--- a/app/views/objectives/_modal_activity.html.erb
+++ b/app/views/objectives/_modal_activity.html.erb
@@ -31,7 +31,7 @@
       </select>
     </div>
     <div class="form-group">
-      <label for="scheduling"><%= t('.scheduling') %> (current: {{current_activity.scheduling | date:'MM/dd/yyyy'}})</label>
+      <label for="scheduling"><%= t('.scheduling') %> (Actual: {{current_activity.scheduling | date:'MM/dd/yyyy'}})</label>
       <input type="date" name="scheduling" class="form-control" ng-model="current_activity.scheduling" placeholder="2000/12/24" min="1900-01-01"></input>
     </div>
     <div class="form-group">
@@ -40,7 +40,7 @@
       </select>
     </div>
     <div class="form-group">
-      <label for="ask">Ask</label>
+      <label for="ask">Petición</label>
       <select class="form-control" name="ask_ids" multiple="multiple" ng-multiple="true" ng-model="current_activity.ask_ids" ng-options="ask.id as ask.description for ask in asks">
       </select>
     </div>
