Add institutional logos

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -100,10 +100,10 @@
     </div>
     <div class="row">
       <div class="col-md-6">
-      Techo
+        <%= image_tag "logo-techo.png" %>
       </div>
       <div class="col-md-6">
-      Hogar
+        <%= image_tag "logo-hogar.png" %>
       </div>       
     </div>
   </div>
