--- a/app/views/objectives/_modal_activity.html.erb
+++ b/app/views/objectives/_modal_activity.html.erb
@@ -31,7 +31,7 @@
       </select>
     </div>
     <div class="form-group">
-      <label for="scheduling"><%= t('.scheduling') %> (Actual: {{current_activity.scheduling | date:'MM/dd/yyyy'}})</label>
+      <label for="scheduling"><%= t('.scheduling') %> (Elegida: {{current_activity.scheduling | date:'dd/MM/yyyy'}})</label>
       <input type="date" name="scheduling" class="form-control" ng-model="current_activity.scheduling" placeholder="2000/12/24" min="1900-01-01"></input>
     </div>
     <div class="form-group">
