--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -480,7 +480,7 @@ div#resources_paginate {
 .benefits{
   padding: 50px 0;
   text-align: center;
-  background-color: #63c0d6;
+  background-color: #5BC6DF;
   height: 650px;
 }
 .benefits p {
@@ -553,7 +553,7 @@ div#resources_paginate {
 .instituciones{
   padding: 50px 0;
   text-align: center;
-  background-color: #63c0d6;
+  background-color: #5BC6DF;
   height: 450px;
 }
 .banner {
