--- a/app/views/objectives/stage4.html.erb
+++ b/app/views/objectives/stage4.html.erb
@@ -57,7 +57,7 @@
                     <td>{{outcome.outcome_type_id}}</td>
                     <!--<td>{{outcome.actor_type_id}}</td>-->
                     <td>{{outcome.no_activities}}</td>
-                    <td class="text-right"><a href="#" title="Edit" ng-click="add_edit_outcome(outcome)"><i class="fa fa-pencil-square-o"></i></a> <a href="#" title="Delete" ng-click="delete_outcome(outcome)"><i class="fa fa-trash"></i></a></td>
+                    <td class="text-right"><a href="#" title="Editar" ng-click="add_edit_outcome(outcome)"><i class="fa fa-pencil-square-o"></i></a> <a href="#" title="Eliminar" ng-click="delete_outcome(outcome)"><i class="fa fa-trash"></i></a></td>
                   </tr>
                 </tbody>
               </table>
