--- a/app/views/objectives/_asks_modal.html.erb
+++ b/app/views/objectives/_asks_modal.html.erb
@@ -6,7 +6,7 @@
     <form>
       <div class="form-group">
         <label for="target-audience"><%= t('.actor') %></label>
-        <select name="actor" ng-options="actor.id as actor.name for actor in actors" ng-model="current_ask.actor_id">
+        <select name="actor" class="form-control" ng-options="actor.id as actor.name for actor in actors" ng-model="current_ask.actor_id">
         </select>
       </div>
       <div class="form-group">
