--- a/app/views/objectives/stage6.html.erb
+++ b/app/views/objectives/stage6.html.erb
@@ -54,7 +54,7 @@
                   <td>{{ ask.actor_name }}</td>
                   <td>{{ ask.description }}</td>
                   <td><i class="fa fa-check" ng-if="ask.execution"></i></td>
-                  <td class="text-right"><a href="#" title="Edit" ng-click="add_edit_ask(ask)"><i class="fa fa-pencil-square-o"></i></a> <a href="#" title="Delete" ng-click="delete_ask(ask)"><i class="fa fa-trash"></i></a></td>
+                  <td class="text-right"><a href="#" title="Editar" ng-click="add_edit_ask(ask)"><i class="fa fa-pencil-square-o"></i></a> <a href="#" title="Eliminar" ng-click="delete_ask(ask)"><i class="fa fa-trash"></i></a></td>
                 </tr>
               </tbody>
             </table>
