Update btn-default blue (the end)

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -57,8 +57,8 @@ table .fa-pencil-square-o, table .fa-trash, table .fa-line-chart, table .fa-cale
 }
 .btn-default {
     border-radius: 15px;
-    background-color: #1B8BD0;
-    border-color: #1B8BD0;
+    background-color: #0091ea;
+    border-color: #0091ea;
     color: #ffffff;
     text-transform: none;
 }
@@ -441,8 +441,8 @@ div#resources_paginate {
 }
 .modal-footer .btn-warning {
   color: #ffffff;
-  background-color: #1B8BD0;
-  border-color: #1B8BD0;
+  background-color: #0091ea;
+  border-color: #0091ea;
   font-weight: 300;
 }
 .modal-footer .btn-warning:hover {
