Update testimonial images col

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -63,28 +63,28 @@
 <div class="testimonial">
   <div class="container">
     <div class="row">
-      <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-        <%= image_tag "t1.png" %>
+      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+        <%= image_tag "t4.png", class: "img-circle" %>
       </div>
-      <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
+      <div class="col-xs-12 col-sm-6 col-md-9 col-lg-9">
         <p class="cita">“<%= t('.testimony1_txt') %>”</p>
         <p class="persona"><%= t('.testimony1_signer') %></p>
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-        <%= image_tag "t1.png" %>
+      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+        <%= image_tag "t5.png", class: "img-circle" %>
       </div>
-      <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
+      <div class="col-xs-12 col-sm-6 col-md-9 col-lg-9">
         <p class="cita">“<%= t('.testimony1_txt') %>”</p>
         <p class="persona"><%= t('.testimony1_signer') %></p>
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-        <%= image_tag "t3.png" %>
+      <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+        <%= image_tag "t6.png", class: "img-circle" %>
       </div>
-      <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9">
+      <div class="col-xs-12 col-sm-6 col-md-9 col-lg-9">
         <p class="cita">“<%= t('.testimony3_txt') %>”</p>
         <p class="persona"><%= t('.testimony3_signer') %></p>
       </div>
