Fix testimonial margin text

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -526,6 +526,7 @@ div#resources_paginate {
   font-style: italic;
   color: #ffffff;
   margin-bottom: 5px;
+  maargin: 50px 0 5px 0;
 }
 .testimonial p.persona {
   font-size: 16px;
@@ -540,9 +541,6 @@ div#resources_paginate {
   width: 50%;
   overflow: hidden;
   color: #ffffff;
-}
-.testimonial p {
-  margin: 20px;
 }
 .testimonial img {
   width: 100%;
