--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -526,7 +526,7 @@ div#resources_paginate {
   font-style: italic;
   color: #ffffff;
   margin-bottom: 5px;
-  maargin: 50px 0 5px 0;
+  margin: 50px 0 5px 0;
 }
 .testimonial p.persona {
   font-size: 16px;
