--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -99,12 +99,10 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6">
-        <%= image_tag "logo-techo.png" %>
-      </div>
-      <div class="col-md-6">
-        <%= image_tag "logo-hogar.png" %>
-      </div>       
+      <div class="col-md-12 logos">
+        <%= image_tag "logo-techo.png", class: "logos" %>
+        <%= image_tag "logo-hogar.png", class: "logos" %>
+      </div>     
     </div>
   </div>
 </div>
