Change persona testimonial color (the end)

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -531,7 +531,7 @@ div#resources_paginate {
 .testimonial p.persona {
   font-size: 16px;
   font-weight: 700;
-  color: #66C8DF;
+  color: #FF6459;
   margin-top: 0;
 }
 .testimonial .t2 {
