Add organizations title

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -548,7 +548,10 @@ div#resources_paginate {
 .testimonial .row {
   margin-bottom: 20px;
 }
-.instituciones{
+.organizations h2 {
+  color: #ffffff;
+}
+.organizations{
   padding: 50px 0;
   text-align: center;
   background-color: #00C2E4;
