--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -91,11 +91,11 @@
     </div>
   </div>
 </div>
-<div class="instituciones">
+<div class="organizations">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        
+        <h2><%= t('.title_orgs') %></h2>
       </div>
     </div>
     <div class="row">
