color de fondo menu móvil

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -693,6 +693,9 @@ table.indicator td:first-child {
   .project-hero, .project-hero02 {
     background: #63c0d6;
   }
+  .collapse.in {
+    background-color: #5494d2;
+  }
 }
 .project-hero h2, .project-hero02 h2 {
     color: #fff;
