color de fondo menu móvil

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -694,7 +694,7 @@ table.indicator td:first-child {
     background: #63c0d6;
   }
   .collapse.in {
-    background-color: #5494d2;
+    background-color: #021b2d;
   }
 }
 .project-hero h2, .project-hero02 h2 {
