padding-bottom menu movil

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -695,6 +695,7 @@ table.indicator td:first-child {
   }
   .collapse.in {
     background-color: #021b2d;
+    padding-bottom: 0;
   }
 }
 .project-hero h2, .project-hero02 h2 {
