altura min pantalla min-width: 992px

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -688,6 +688,9 @@ table.indicator td:first-child {
   .navbar-nav .dropdown .btn-default {
     margin-top: 10px;
   }
+  .container {
+    height: 390px;
+  }
 }
 @media all and (max-width: 992px) {
   .project-hero, .project-hero02 {
