corrección min-height

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -688,7 +688,7 @@ table.indicator td:first-child {
   .navbar-nav .dropdown .btn-default {
     margin-top: 10px;
   }
-  .container {
+  .container.FullPage {
     height: 390px;
   }
 }
