ajuste panel-title

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -787,7 +787,7 @@ table.indicator td:first-child {
 .panel-default h4 {
   margin: 15px;
 }
-.panel-default .panel-title h4 {
+.panel-default h4.panel-title {
   margin: 0;
 }
 .panel-title .fa-times, .panel-default h4 .fa-times-circle {
