--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -31,12 +31,12 @@
 <% end %>
 <div class="benefits">
   <div class="container">
-    <div class="row mb50">
+    <div class="row">
       <div class="col-md-12">
         <h2><%= t('.main_txt') %></h2>
       </div>
     </div>
-    <div class="row mb50">
+    <div class="row benefits">
       <div class="col-sm-6 col-md-3">
         <p><%= image_tag "1.png" %></p>
         <p><%= t('.sentence_resources') %></p>
