Fix organizations logos position

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -563,7 +563,7 @@ div#resources_paginate {
   position: relative;
 }
 img.logos{
-  display: -webkit-inline-box;
+  display: inline-block;
   vertical-align: middle;
   margin: 6%;
 }
