Add logo in footer

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -263,6 +263,10 @@ footer h5 {
 footer a {
   color: #ffffff;
 }
+
+.brand{
+  display: inline-block;
+}
 .stage_menu h3 {
   font-size: 16px;
   font-weight: 600;
