--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -24,7 +24,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="<%= root_path %>" target="_self"><%= image_tag "logo.png" %> <span>Beta</span></a>
+          <a class="navbar-brand" href="<%= root_path %>" target="_self"><%= image_tag "logo.png" %> <span><%= t('.brand_extra') %></span></a>
         </div>
         <!-- collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -64,7 +64,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-6 col-sm-6 col-md-8 col-lg-8">
-            <p class="brand" href="#"><%= t('.brand') %> <span><%= t('.brand_extra') %></span></p>
+            <p class="brand" href="#"><%= image_tag "logo.png" %></p>
             <div class="row">
               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                 <p><%= t('.footer_left_txt') %></p>
